--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                    </div>
                    
                    <form action="post">
-                       <input type="text" name="date" value="ДАТА">
-                       <input type="text" name="time" value="ВРЕМЯ">
-                       <input type="text" name="name" value="ВАШЕ ИМЯ">
-                       <input type="text" name="phone" value="ТЕЛЕФОН">
-                       <input type="submit" value="ОТПРАВИТЬ">
+                       <input class="form-text" type="text" name="date" value="ДАТА">
+                       <input class="form-text" type="text" name="time" value="ВРЕМЯ">
+                       <input class="form-text" type="text" name="name" value="ВАШЕ ИМЯ">
+                       <input class="form-text" type="text" name="phone" value="ТЕЛЕФОН">
+                       <input class="form-btn" type="submit" value="ОТПРАВИТЬ">
                    </form>
 
                   
